old-JOM-files/kv_versioned_docs/version-2.9.4/configuring/index.md
---
title: "Configuring Riak KV"
sidebar_position: 200
sidebar_label: Configuring
pagination_label: "Configuring Riak KV"
hide_table_of_contents: true
last_update:
  author: RiakDocs
  date: 2020-07-03
---
import RiakDocsNote from '@site/src/components/RiakDocs/RiakDocsNote';


[config basic]: ../configuring/basic
[config backend]: ../configuring/backend
[config manage]: ../configuring/managing
[config reference]: ../configuring/reference
[config strong consistency]: ../configuring/strong-consistency
[config load balance]: ../configuring/load-balancing-proxy
[config mapreduce]: ../configuring/mapreduce
[config search]: ../configuring/search
[config next-gen-repl]: ../configuring/next-gen-replication
[config aae]: ../configuring/active-anti-entropy
[config v3 mdc]: ../configuring/v3-multi-datacenter
[config v2 mdc]: ../configuring/v2-multi-datacenter

## In This Section

#### [Basic Configuration][config basic]

A guide covering commonly adjusted parameters when setting up a new cluster.

[Learn More >>][config basic]

#### [Backend Configuration][config backend]

Information on backend-specific configuration parameters.

[Learn More >>][config backend]

#### [Managing Configuration][config manage]

A small guide to retrieving, checking, and debugging your cluster configuration.

[Learn More >>][config manage]

#### [Configuration Reference][config reference]

A detailed list of all possible configuration parameters.

[Learn More >>][config reference]

#### [Implementing Strong Consistency][config strong consistency]

An article providing information on configuring and monitoring a Riak KV
cluster's optional strong consistency subsystem.

[Learn More >>][config strong consistency]

#### [Load Balancing & Proxy][config load balance]

A brief guide on commonly used load-balancing and proxy solutions.

[Learn More >>][config load balance]

#### [MapReduce Settings][config mapreduce]

Tutorial on configuring and tuning MapReduce for a cluster.

[Learn More >>][config mapreduce]

#### [Search Settings][config search]

Information on configuring and using Riak KV Search from an operational perspective.

[Learn More >>][config search]

#### [Next Gen Replication][config next-gen-repl]

Information on configuring TicTac AAE's Next Gen Replication.

[Learn More >>][config next-gen-repl]

#### [Active-Anti-Entropy][config aae]

Information on configuring Riak's two Active Anti-Entropy (AAE) systems.

[Learn More >>][config aae]

#### [V3 Multi-Datacenter][config v3 mdc]

A guide on configuring Riak's V3 Multi-Datacenter Replication

[Learn More >>][config v3 mdc]

#### [V2 Multi-Datacenter][config v2 mdc]

A guide on configuring Riak's older V2 Multi-Datacenter Replication

[Learn More >>][config v2 mdc]

